# Gradually-Typed-Programming-Language

./: .gitignore  LICENSE  README.md  dune-project
examples/: arithmetic.ss  classes_and_objects.ss  control_flow.ss  modules_and_imports.ss  runtime_error.ss  typed_module_chain.ss
lib/: cesk.ml  cesk.mli  dune  exceptions.mli  linker.ml  linker.mli  name.ml  name.mli  system.ml  system.mli  typecheck.ml  typecheck.mli  wellformed_system.ml  wellformed_system.mli  xtr_lib.ml
test/: dune  test_xtr.ml
